# simeon

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  api_intro.html  cli_intro.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py  sitemap.xml  tox.ini
.github/workflows/: codeql-analysis.yaml  dockerize.yaml  docs.yaml  release.yaml  run_tests.yaml
_sources/: cli_intro.rst.txt
docs/source/: api_intro.rst  conf.py  index.rst
simeon/: __init__.py  __main__.py
simeon-geoip/: __main__.py
simeon-youtube/: __main__.py
simeon/download/: __init__.py  aws.py  emails.py  logs.py  sqls.py  utilities.py
simeon/exceptions/: __init__.py
simeon/report/: __init__.py  utilities.py
simeon/report/queries/: chapter_grades.sql  course_item.sql  course_modal_agent.sql  course_modal_ip.sql  course_modal_language.sql  course_problem.sql  enrollday_all.sql  enrollment_events.sql  forum_events.sql  forum_person.sql  forum_posts.sql  language_multi_transcripts.sql  ora_events.sql  pc_day_agent_counts.sql  pc_day_ip_counts.sql  pc_day_totals.sql  pc_day_trlang.sql  pc_forum.sql  pc_nchapters.sql  pc_video_watched.sql  person_course.sql  person_course_day.sql  person_enrollment_verified.sql  person_item.sql  person_problem.sql  problem_check.sql  problem_grades.sql  show_answer.sql  show_answer_stats_by_course.sql  show_answer_stats_by_user.sql  time_on_asset_daily.sql  time_on_asset_totals.sql  time_on_task.sql  time_on_task_totals.sql  video_axis.sql  video_stats_day.sql
simeon/scripts/: __init__.py  geoip.py  simeon.py  utilities.py  youtube.py
simeon/scripts/data/: geographic_regions_by_country.csv  simeon_epilog.txt
simeon/tests/: __init__.py  test_download_utilities.py  test_integration.py  test_report_utilities.py  test_upload_utilities.py
simeon/upload/: __init__.py  gcp.py  utilities.py
(+56 files in other folders)
