[build-system]
requires = ["setuptools>=59.6.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simeon"
authors = [
    {name = "MIT Institutional Research", email = "irx@mit.edu"},
]
description = "A CLI tool to help process research data from edX"
readme = "README.rst"
requires-python = ">=3.6"
keywords = ["research", "edx", "MOOC", "education", "online-learning"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing",
]
dependencies = [
    "boto3>=1.16.57",
    "google-cloud-bigquery>=2.6.2",
    "google-cloud-storage>=1.35.0",
    "jinja2",
    "python-dateutil>=2.8.1",
]
dynamic = ["version"]

[project.optional-dependencies]
geoip = ["geoip2"]
test = ["black", "isort", "pip-tools", "sphinx", "tox"]
dev = ["black", "isort", "pip-tools", "sphinx", "tox"]

[tool.setuptools.package-data]
"simeon.upload" = ["schemas/*.json"]
"simeon.report" = ["queries/*.sql"]
"simeon.scripts" = ["data/*.csv"]

[project.scripts]
simeon = "simeon.scripts.simeon:main"
simeon-geoip = "simeon.scripts.geoip:main"
simeon-youtube = "simeon.scripts.youtube:main"

[project.urls]
"Homepage" = "https://github.com/MIT-IR/simeon"
"Bug Tracker" = "https://github.com/MIT-IR/simeon/issues"
"Documentation" = "https://mit-ir.github.io/simeon/"
